<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jesusramirez.proyecto.views.fragmentsMaestro.MaestroCrearGrupoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_margin"
    android:layout_marginLeft="@dimen/activity_margin"
    android:layout_marginRight="@dimen/activity_margin"
    tools:context="com.jesusramirez.proyecto.views.fragmentsMaestro.MaestroCrearGrupoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.18">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevo_grupo_fragment"
                    android:textSize="@dimen/textsize_small"
                    android:textAlignment="center"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:theme="@style/EditTextBlack">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etnombregrupo_creargrupo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textnombremateria_grupos" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diasclase_grupo"
                    android:textSize="@dimen/textsize_xsmall"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.23"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/checklunes_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="L"/>
                <CheckBox
                    android:id="@+id/checkmartes_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"/>
                <CheckBox
                    android:id="@+id/checkmiercoles_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"/>
                <CheckBox
                    android:id="@+id/checkjueves_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J"/>
                <CheckBox
                    android:id="@+id/checkviernes_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="V"/>
                <CheckBox
                    android:id="@+id/checksabado_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"/>
                <CheckBox
                    android:id="@+id/checkdomingo_creargrupos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="D"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.21">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Salon: "
                        android:textSize="@dimen/textsize_xsmall"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hora: "
                        android:textSize="@dimen/textsize_xsmall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:theme="@style/EditTextBlack">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etsalon_creargrupo"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/etsalon_creargrupo"
                            android:inputType="text"
                            android:textSize="@dimen/textsize_xsmall"/>
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinnerHoraClase"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></Spinner>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.17">

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:theme="@style/EditTextBlack">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etcapacidad_creargrupo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etcapacidad_creargrupo"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:theme="@style/EditTextBlack">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etfaltaspermitidas_creargrupo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etfaltaspermitidas_creargrupo"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.21">

                <Button
                    android:id="@+id/btncreargrupo_grupos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btncreargrupo_grupos"
                    android:layout_marginTop="@dimen/marginbtn"
                    android:onClick="grupoSeleccionado"
                    android:theme="@style/RaisedButtonDark"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

